Added some line breaks

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 		<link rel="stylesheet" type="text/css" href="app.css">
 	</head>
 	<body ng-app="videoClipApp">
-		<nav class="float-right"><a href="#/admin">Admin view</a> | <a href="#/user">User view</a></nav>
-		<div data-ng-view></div>
+		<nav class="float-right">
+			<a href="#/admin">Admin view</a> | <a href="#/user">User view</a>
+		</nav>
+		<div ng-view></div>
 		<footer class="clear-both app-footer">
 			<hr>
-			<p>&copy; 2016 Donatas Srogis (<em>dsrogis@yahoo.com</em>)
-			<a href="project-info.pdf" target="_blank">Project description &amp; requirements</a>.</p>
+			<p>
+				&copy; 2016 Donatas Srogis (<em>dsrogis@yahoo.com</em>)
+				<a href="project-info.pdf" target="_blank">Project description &amp; requirements</a>.
+			</p>
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
